* Relink material for main character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Fighting3D")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="Fighting3DGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Assets/Maps/DesertArena_Level.DesertArena_Level
+GameDefaultMap=/Game/Assets/Maps/DesertArena_Level.DesertArena_Level
+
