--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,4 +14,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Assets/Maps/DesertArena_Level.DesertArena_Level
 GameDefaultMap=/Game/Assets/Maps/DesertArena_Level.DesertArena_Level
+GlobalDefaultGameMode=/Game/Assets/BluePrints/FightingArenaGameModeBP.FightingArenaGameModeBP_C
 
